--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
 </head>
 <body>
-    <div id="wrapper">
-    <div id="main-block">
-    <h1>module03_2</h1>
-      <div class="news-block" {text-align:left;color:black;background-color:rgb(255,0,0);width:50px;height:150px;padding:5px;border:2px solid #889;margin:10px;}>
+  <div id="wrapper">
+     <div id="main-block">
+     <h1>module03_2</h1>
+     <div class="news-block1">
+         <link rel="stylesheet" type="text/css" href="index.css">
          <h2>module03_2</h2> 
          <p>module03_2</p>
+     </div>
+     <div class="news-block2">
+         <link rel="stylesheet" type="text/css" href="index.css">
+         <h2>module03_2</h2>
+         <p>module03_2</p>
+     </div>
+     <div class="news-block3">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <h2>module03_2</h2> 
+        <p>module03_2</p>
       </div>
-  </div>
-  <div class="news-block" {text-align:cenfer;color:black;background-color:rgb(0,255,0);width:610px;height:900px;padding:5px;border:2px solid#889;margin:10px;}>
-     <h2>module03_2</h2>
-     <p>module03_2</p>
-  </div>
-  <div class="news-block"{text-align:right;color:black;background-color:rgb(0,0,255);width:610px;height:900px;padding:5px;border:2px solid#889;margin:10px;}>
-     <h2>module03_2</h2> 
-     <p>module03_2</p>
+    <div class="clear"></div>
    </div>
   </div>
- </div>  
 </body>
 </html>
