--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
 </head>
 <body>
-  <div id="wrapper">
+   <div id="wrapper">
      <div id="main-block">
      <h1>module03_2</h1>
      <div class="news-block1">
@@ -25,7 +25,7 @@
         <p>module03_2</p>
       </div>
     <div class="clear"></div>
-   </div>
-  </div>
+   </div
+ </div>>
 </body>
 </html>
